# bta_ds

./: README.md  analysis.ipynb  main.py  pubmed.py  pyproject.toml  requirements.txt  run.py
config/: protocol.yaml
data/raw/: raw_1.xlsx  raw_2.xlsx
notebooks/: analysis.ipynb  analysis.py  analysis_explained.ipynb  analysis_pipeline_walkthrough.ipynb
notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb  analysis_explained-checkpoint.ipynb  analysis_pipeline_walkthrough-checkpoint.ipynb
src/bta_study/: dedup.py  features.py  generate.py  ingest.py  parsers.py  pipeline.py  schema.py  stats.py
tests/: test_parsers.py  test_pipeline.py
