[project]
name = "med-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.0",
    "jupytext>=1.16",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pandera>=0.20",
    "pytest>=8.0",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "seaborn>=0.13.2",
    "statsmodels>=0.14",
]
